--- a/home/templates/establish.html
+++ b/home/templates/establish.html
@@ -1,30 +1,104 @@
 <!--설립취지 페이지-->
 {% extends 'base.html' %}
-{% block content %}
 
-<div class="container mt-3">
-    
-      <div class="card mb-3" style="min-width: 360px;">
-          <div class="row no-gutters">
-            <div class="col-md-4">
-              <img src="http://kyca.or.kr/img/img_about.jpg" class="card-img p-3" alt="...">
-            </div>
-            <div class="col-md-8">
+{% block extra_head %}
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" type="text/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+
+{% endblock %}
+
+
+{% block content %}
+<div class="container">
+    <div class="row mb-4 pl-4 pr-4 bg">
+        <div class="col">
+          <img src="../static/img/establish_kyca_1.png" >
+        </div>
+        <div class="col text-center">
+            <h2>“ 미래를 이끌어갈 코어 2030대, 
+              <br>암 경험자가 마음 편히 치료 받고,
+              <br> 살기 좋은 사회를 만들기 위해 
+              <br>
+              <br><span class="text-success">KYCA또봄</span>이 함께 합니다”</h2>
+        </div>
+    </div>
+    <div class="row">
+      <div class="col text-center mt-3 mb-4">
+        <p class="h1 text-success">건강한 당신을 또 보고 싶습니다, I See u Again</p>
+      </div>     
+    </div>
+    <div class="row">
+      <div class="row row-cols-1 row-cols-md-2">
+        <div class="col mb-4 ">
+          <div class="card" style="min-height: 300px;">
               <div class="card-body">
-               
-                <p class="card-text">20, 30대 암 경험자들이 병을 이겨낼 수 있는 매개체를 제공하고 지속적으로 그들에게
-                  삶을 가치 있게 살고 싶게 하는 가치를 제공하는 커뮤니티이자 비영리 기업</p>
-                <p class="card-text"><small class="text-muted">‘당신을 또 봅니다(I See U Again)’라는 이름은 ‘당신을 건강한 모습을 다시 보고 싶다’라는 의미이며,
-                  줄여서 ‘또봄’이라 부르며 ‘또, 다시 봄’이란 의미를 내포하고 있습니다.
-                  또봄은 20~30대 암환우들에게 극복의지를 주고, 여행을 테마로 병과 싸워 이겨낼 수 있는 원동력을 제공하며,
-                  지속적으로 미래의 희망적인 삶을 이끌어 갈 수 있도록 돕는 커뮤니티이자 그들에 대한 부정적인 사회적 인식을
-                  개선하고자 하는 국내 최초의 2030대를 돕는 유일무이한 커뮤니티입니다.
-                  또봄은 5개월만에 말기암을 극복한 경험자가 최초로 만든 커뮤니티로써 암 극복자들과 2030대 암환우를 돕고자 하는
-                  마음을 가진 서포터즈와 후원인들로 구성되었으며, 지속장기적으로 돕고 성장하고자 사회적 기업을 준비 중에 있습니다.</small></p>
-              </div>
+              <h5 class="card-title font-weight-bold">[젊은 암 경험자를 위한 <span class="h3 font-weight-bold">국내 최초</span>]</h5>
+              <p class="card-text">
+                한국청년암협회또봄은 국내 최초로 20, 30대 젊은 암 경험자들에게 극복 momentum과 삶을 가치 있게 살 수 
+                있도록 지원, 소통하기 위해 설립된 비영리 기관입니다. 2016년 12월 작은 프로젝트를 시작으로 꾸준한 활동을 하였고, 
+                2020년 8월 서울시 정식 비영리 사단법인 허가를 받아 젊은 암 경험자를 위한 투명하면서 진정성 있는 기관으로 발돋움 하고자 합니다.
+              </p>
             </div>
           </div>
         </div>
-  </div>
+        <div class="col mb-4">
+          <div class="card" style="min-height: 300px;">
+              <div class="card-body">
+              <h5 class="card-title font-weight-bold">[젊은 암 경험자가 <span class="h3 font-weight-bold">직접 만든</span>]</h5>
+              <p class="card-text">
+                2015년 7월 버킷림포마 4기 선고를 받고 난 후 힘든 투병생활과 극복한 경험을 바탕으로 그들이 어떤 부분이 필요한지를 알고 있습니다. 직접 경험한 것만큼 설립 목표가 분명한 것은 없다고 생각합니다. 그래서 어떤 부분이 필요하고 부족한 지에 대해 알고 있으며, 저 뿐만 아니라 다른 젊은 암 경험자들과 소통하며 진정으로 필요한 부분을 찾고 그를 해결하기 위해 지속적으로 사업동반자를 확대하고 긴밀한 협력을 진행하고자 합니다.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col mb-4">
+          <div class="card" style="min-height: 300px;">
+              <div class="card-body">
+              <h5 class="card-title font-weight-bold">[젊은 암 경험자에게 <span class="h3 font-weight-bold">필요한</span>]</h5>
+              <p class="card-text">
+                국민의 3분의 1이 암을 겪는 이 시대에 젊은 암 경험자는 다른 세대층에 비해 증가추세가 높지만 80년대 이전에 머물러 있는 암 환자에 대한 잘못된 인식과 편견으로 인해 나서는 사람이 없었습니다. 그러다 보니 빙산의 일부분만 보였고, 사회적 관계(직장생활, 결혼 등), 재취업 등 앞으로 발생할 수 있는 사회적 문제에 대해 해결하고자 하는 곳이 없었습니다. 이를 한국청년암협회또봄이 앞장서서 해결하고자 합니다.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col mb-4">
+          <div class="card" style="min-height: 300px;">
+              <div class="card-body">
+              <h5 class="card-title font-weight-bold">[젊은 암 경험자가 <span class="h3 font-weight-bold">살기 좋은</span>]</h5>
+              <p class="card-text">
+                사회에 꼭 필요한 세대, 그렇기 때문에 암 투병 시 누구보다 자기부정도 많고, 생각해야 할 것도 많은 것이 젊은 암 경험자입니다. 또한 극복 후에도 암 경험자임을 숨겨야 하고 다시 치열한 사회 경쟁 속에 놓일 수 밖에 없는 것이 현실입니다. 아직 우리 나라에서는 2030대 젊은 암 경험자가 암 투병 전후에 치료에 집중할 수 있는 환경이 조성되어 있지 않습니다. 이런 부분에 필요한 제도, 법률, 인식 개선에 한국청년암협회또봄이 함께 하고자 합니다. 나아가 국내 뿐 만이 아닌 젊은 암 경험자를 위한 국제기구로 발전하고자 합니다.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+
+
+
+    <div class="row mb-3">
+      <p class="h3 text-secondary">한국청년암협회또봄 CI</p>
+      <p class="h5 text-secondary pl-4 pr-4">또봄의 로고는 계절을 암 경험자의 주기를 빗대어 각 네모를 계절의 색깔로 표현했으며, 
+        이를 이겨내어 새로운 봄, 사계절이 지나 다시 찾아오는 봄처럼 건강하고 행복한 모습을 의미하고 있습니다.</p>
+    </div>
+    <div class="row mb-3 border border-success" style="min-width: 610px;">
+        <div class="col pt-2 pb-2 maxwith">
+             <img src="../static/img/img_about02.png" alt="" class="img-responsive">
+        </div>
+        <div class="col pt-2 pb-2">
+            <p class="text-secondary">여름 : 암 투병 전 활동적인</p>
+            <p class="text-secondary">가을 : 암 투병을 하면서 외롭고 고독한</p>
+            <p class="text-secondary">겨울 : 암 투병을 지속되면서 힘들고 지친</p>
+            <p class="text-secondary">봄 : 암 투병을 이겨내고 새롭고, 다시 시작하는</p>
+        </div>
+    </div>
+    
+</div>
+
+   
   
 {% endblock %}
