--- a/home/templates/event.html
+++ b/home/templates/event.html
@@ -8,62 +8,73 @@
                 <div class="mb-4">
                     <br>
                     <br>
-                    <img class="img-fluid" class="img-top" src="/static/img/event/1-1.png" alt="image cap">
-                    <div class="body">
-                        <h2 class="title"><br>암 경험자간 소통 모임 기획 및 지원<br></h2>
-                        <p class="text">젊은 암 경험자들이 모여 재능 및 정보 공유를 함으로써 경제적/정서적
-                                              안정감을 찾고, 이들의 권익이 침해되지 않도록 하여 사회에 조속히 복귀할 수
-                                              있도록 돕는 일을 합니다.
-                        </p>
-                        <a href="#" class="btn btn-outline-dark" data-target="#modal" data-toggle="modal">자세히 보기 &rarr;</a>
-                    </div>
-                </div>
-                <div class="mb-4">
-                    <img class="img-fluid" class="img-top" src="/static/img/event/2-1.PNG" alt="image cap">
-                    <div class="body">
-                        <h2 class="title"><br>여행버킷챌린지 ‘앎’ 캠페인<br></h2>
-                        <p class="text">암 투병 중이거나 추적 검사 중인 암 경험자들에게 질병을 극복할 수 있다는
-                                              자신감을 부여하고, 젊은 암 경험자들에 대한 인식 개선을 위한 캠페인을
-                                              진행합니다.</p>
-                        <a href="#" class="btn btn-outline-dark" data-target="#modal1" data-toggle="modal">자세히 보기 &rarr;</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--contents modal-->
-    <div class="modal fade right" id="modal" tabindex="-1">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    소통 모임 소개
-                    <button class="close" data-dismiss="modal">&times;</button>
-                </div>
-                <div class="modal-body" style="text-align: center;">
-                    월 1 회 개최 (2020 년도는 코로나 19 로 비대면 모임으로 대체)
-                    <img class="img-fluid" src="/static/img/event/1-3.png" alt="" id="image" style="width:471px; height:223px;">
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="modal fade right" id="modal1" tabindex="-1">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">캠페인 소개
-                    <button class="close" data-dismiss="modal">&times;</button>
-                </div>
-                <div class="modal-body" style="text-align: center;">
-                    <p class="card-text">
-                        투병 중에 있는 환자 본인이 완치 후 가고 싶은 여행지를 본 법인에
-                                                밝히고 질병이 완치 되고, 1 년 후 여행에 동행하는 챌린지 프로그램으로 초기에는
-                                                추적검사 중인 친구들의 버킷리스트를 취합,선발을 통해 여행 버킷 챌린지를
-                                                시행하고자 합니다.<br>국내의 경우 반기당 1 회, 해외의 경우 연 1 회를 목표로 합니다.
-                        <br>(해당인원의 스토리를 포토북 또는 영상으로 제작하여 바이럴 진행)
+                    <img class="img-fluid" class="img-top" src="/static/img/event/class.jpg" alt="image cap" style="width:400px; height:400px;>
+                                            <div class=" body">
+                    <h2 class="title"><br>암 경험자간 소통 모임 기획 및 지원<br></h2>
+                    <p class="text">젊은 암 경험자들이 모여 재능 및 정보 공유를 함으로써 경제적/정서적
+                                                                      안정감을 찾고, 이들의 권익이 침해되지 않도록 하여 사회에 조속히 복귀할 수
+                                                                      있도록 돕는 일을 합니다.
                     </p>
-                    <img class="img-fluid" src="/static/img/event/2-2.png" alt="" id="image" style="width:395px; height:247px;">
-                    <img class="img-fluid" src="/static/img/event/2-3.png" alt="" id="image" style="width:379px; height:245px;">
+                    <a href="#" class="btn btn-outline-dark" data-target="#modal" data-toggle="modal">자세히 보기 &rarr;</a>
+                </div>
+            </div>
+            <br>
+            <div class="mb-4">
+                <img class="img-fluid" class="img-top" src="/static/img/main/main5.jpg" alt="image cap" style="width:400px; height:320px;">
+                <div class="body">
+                    <h2 class="title"><br>여행버킷챌린지 ‘앎’ 캠페인<br></h2>
+                    <p class="text">암 투병 중이거나 추적 검사 중인 암 경험자들에게 질병을 극복할 수 있다는
+                                                                      자신감을 부여하고, 젊은 암 경험자들에 대한 인식 개선을 위한 캠페인을
+                                                                      진행합니다.</p>
+                    <a href="#" class="btn btn-outline-dark" data-target="#modal1" data-toggle="modal">자세히 보기 &rarr;</a>
                 </div>
             </div>
         </div>
     </div>
-{% endblock %}
+</div>
+<!--contents modal-->
+<div class="modal fade right" id="modal" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                소통 모임 소개
+                <button class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body" style="text-align: center;">
+                월 1 회 개최 (2020 년도는 코로나 19 로 비대면 모임으로 대체)
+                <img class="img-fluid" src="/static/img/event/class1.png" alt="" id="image" style="width:256px; height:256px;">
+                <br><br>
+                <img class="img-fluid" src="/static/img/event/class2.png" alt="" id="image" style="width:256px; height:256px;">
+                <br><br>
+                <img class="img-fluid" src="/static/img/event/class3.png" alt="" id="image" style="width:256px; height:256px;">
+                <br><br>
+                <img class="img-fluid" src="/static/img/event/class4.png" alt="" id="image" style="width:256px; height:256px;">
+                <br><br>
+                <img class="img-fluid" src="/static/img/event/class5.jpg" alt="" id="image" style="width:256px; height:256px;">
+                <br><br>
+                <img class="img-fluid" src="/static/img/event/class7.png" alt="" id="image" style="width:256px; height:256px;">
+                <br><br>
+                <img class="img-fluid" src="/static/img/event/class8.jpg" alt="" id="image" style="width:256px; height:256px;">
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal fade right" id="modal1" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">캠페인 소개
+                <button class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body" style="text-align: center;">
+                <p class="card-text">
+                    투병 중에 있는 환자 본인이 완치 후 가고 싶은 여행지를 본 법인에
+                                                                    밝히고 질병이 완치 되고, 1 년 후 여행에 동행하는 챌린지 프로그램으로 초기에는
+                                                                    추적검사 중인 친구들의 버킷리스트를 취합,선발을 통해 여행 버킷 챌린지를
+                                                                    시행하고자 합니다.<br>국내의 경우 반기당 1 회, 해외의 경우 연 1 회를 목표로 합니다.
+                    <br>(해당인원의 스토리를 포토북 또는 영상으로 제작하여 바이럴 진행)
+                </p>
+                <img class="img-fluid" src="/static/img/event/2.jpg" alt="" id="image" style="width:784px; height:508px;">
+            </div>
+        </div>
+    </div>
+</div>{% endblock %}
