--- a/home/templates/establish.html
+++ b/home/templates/establish.html
@@ -11,11 +11,11 @@
 
 {% block content %}
 <div class="container">
-    <div class="row mb-4 pl-4 pr-4">
-        <div class="col-xs-12 mb-3">
+    <div class="row mb-4">
+        <div class="col-lg-6 col-md-12 mb-3 text-center">
           <img src="../static/img/establish_kyca_1.png" class="img-fluid">
         </div>
-        <div class="col text-center">
+        <div class="col-lg-6 col-md-12 text-center">
             <h2>“ 미래를 이끌어갈 코어 2030대, 
               <br>암 경험자가 마음 편히 치료 받고,
               <br> 살기 좋은 사회를 만들기 위해 
@@ -28,8 +28,7 @@
         <p class="h1 text-success">건강한 당신을 또 보고 싶습니다, I See u Again</p>
       </div>     
     </div>
-    <div class="row">
-      <div class="row row-cols-1 row-cols-md-2">
+    <div class="row row-cols-1 row-cols-md-2">
         <div class="col mb-4 ">
           <div class="card mb-5 border-0" style="min-height: 300px;">
               <div class="card-body">
@@ -73,25 +72,25 @@
           </div>
         </div>
       </div>
-    </div>
 
     <div class="row mb-5">
-      <p class="h3 text-secondary">한국청년암협회또봄 CI</p>
-      <p class="h5 text-secondary pl-4 pr-4">또봄의 로고는 계절을 암 경험자의 주기를 빗대어 각 네모를 계절의 색깔로 표현했으며, 
-        이를 이겨내어 새로운 봄, 사계절이 지나 다시 찾아오는 봄처럼 건강하고 행복한 모습을 의미하고 있습니다.</p>
-    </div>
-    <div class="row mb-3 border border-success pl-2 pr-2" >
-        <div class="col-xs-12 pt-2 pb-2">
+      <div class="col-md-12">
+          <p class="h3 text-secondary">한국청년암협회또봄 CI</p>
+      </div>
+      <div class="col-md-12 mb-4">
+        <p class="h5 text-secondary">또봄의 로고는 계절을 암 경험자의 주기를 빗대어 각 네모를 계절의 색깔로 표현했으며, 
+          이를 이겨내어 새로운 봄, 사계절이 지나 다시 찾아오는 봄처럼 건강하고 행복한 모습을 의미하고 있습니다.</p>
+      </div>    
+        <div class="col-lg-6 col-md-12 mb-4">
              <img src="/static/img/img_about02.png" alt="" class="img-fluid">
         </div>
-        <div class="col pt-2 pb-2">
+        <div class="col-lg-6 col-md-12">
             <p class="text-secondary">여름 : 암 투병 전 활동적인</p>
             <p class="text-secondary">가을 : 암 투병을 하면서 외롭고 고독한</p>
             <p class="text-secondary">겨울 : 암 투병을 지속되면서 힘들고 지친</p>
             <p class="text-secondary">봄 : 암 투병을 이겨내고 새롭고, 다시 시작하는</p>
         </div>
-    </div>
-    
+    </div>    
 </div>
 
    
